rke2.d/bioskop/master/catalog/mesh/headplane/06-service-headplane.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: ${headscale-namespace}/headplane
  name: headplane
  namespace: ${headscale-namespace} # kpt-set: ${headscale-namespace}
  labels:
    app: headplane
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|${headscale-namespace}|headplane'
spec:
  type: ClusterIP
  selector:
    app: headplane
  ports:
    - name: http
      port: 3000
      targetPort: http
